# annotate-snippets-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp-linter.yml  gtest.yml
cmake/: AddGoogleTest.cmake  AddRang.cmake  AddUnicodeDisplayWidth.cmake  annotate-snippets-config.cmake.in
include/annotate_snippets/: annotated_source.hpp  diag.hpp  patch.hpp  source_file.hpp  source_location.hpp  style.hpp  style_spec.hpp  styled_string.hpp  styled_string_view.hpp
include/annotate_snippets/detail/: styled_string_impl.hpp  unicode_display_width.hpp
include/annotate_snippets/detail/diag/: diag_entry_builder.hpp  diag_entry_impl.hpp  level.hpp
include/annotate_snippets/renderer/: human_renderer.hpp
src/: annotated_source.cpp  source_file.cpp  style_spec.cpp  styled_string_view.cpp
src/detail/: styled_string_impl.cpp
src/renderer/: human_renderer.cpp
test/: CMakeLists.txt  annotated_source_test.cpp  source_file_test.cpp  source_location_test.cpp  style_spec_test.cpp  styled_string_test.cpp  styled_string_view_test.cpp
test/renderer/human_renderer_test/: level_for_test.hpp  render_multiline_annotation.cpp  render_multiple_diag_entries.cpp  render_singleline_annotation.cpp  render_suggestion.cpp  render_title_message.cpp
